use jar file system in ui designer